Fix issue with overflow hiding search results - BD

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -30,7 +30,6 @@ html {
   align-items: center;
   vertical-align: middle;
   position: relative;
-  overflow: hidden;
 }
 
 .toolbar-title-searching {
